alignment fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,6 +32,7 @@
   --primary-dark: #24cfa6;
   --btn-hover: #16c79b;
   --card-bg-color: #171717;
+  --border-color: #292828;
   --text-color: #ffffff;
   --text-secondary: #adb5bd;
   --tag-color: #495057;
@@ -88,7 +89,7 @@ nav {
   left: 0;
   width: 100%;
   height: 1rem;
-  padding: 2.3rem var(--vertical-padding);
+  padding: 2.2rem var(--vertical-padding);
   font-family: 'neul';
   background-color: rgba(72, 72, 72, 0);
   backdrop-filter: blur(5px);
@@ -192,11 +193,11 @@ nav .logo .logo-img {
   padding: 0 var(--vertical-padding);
 }
 .middle-section .middle-top h2 {
-  padding: 0 12vw;
-  font-family: 'neul';
-  font-size: clamp(1.8rem, 3vw, 3.5rem);
+  padding: 0 15vw;
+  font-family: 'neu';
+  font-size: clamp(1.8rem, 2.7vw, 3.5rem);
   font-weight: 200;
-  line-height: 1.2;
+  line-height: 1;
   text-align: center;
 }
 .middle-section .video-container {
@@ -226,16 +227,16 @@ nav .logo .logo-img {
   margin-top: 15vh;
 }
 .courses-section .courses-title {
-  margin: 1.5rem var(--vertical-padding);
+  margin: 2rem var(--vertical-padding);
   font-family: 'neul';
-  font-size: clamp(2.5rem, 3.5vw, 4rem);
+  font-size: clamp(2.5rem, 2.8vw, 4rem);
   font-weight: 300;
 }
 .card-container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
-  gap: 2vw;
-  row-gap: 5vh;
+  gap: 1.5vw;
+  row-gap: 8vh;
   max-width: 90vw;
   margin: 0 auto;
 }
@@ -259,13 +260,13 @@ nav .logo .logo-img {
 }
 .status-badge {
   position: absolute;
-  top: 1rem;
-  right: 1rem;
+  top: 0.75rem;
+  right: 0.75rem;
   padding: 0.3rem 0.6rem;
-  border-radius: 0.3rem;
+  border-radius: 0.2rem;
   background-color: #ffffff;
   color: #0c0c0c;
-  font-size: 0.8rem;
+  font-size: 0.6rem;
   font-weight: 600;
   text-transform: uppercase;
   letter-spacing: 0.5px;
@@ -279,26 +280,27 @@ nav .logo .logo-img {
 }
 .card-body h2 {
   font-family: 'neul';
-  font-size: 1.8rem;
-  font-weight: 600;
+  font-size: 1.4rem;
+  font-weight: 500;
   line-height: 1.2;
   overflow: hidden;
   text-overflow: ellipsis;
   display: -webkit-box;
-  -webkit-line-clamp: 3;
+  -webkit-line-clamp: 4;
   -webkit-box-orient: vertical;
+  line-clamp: 4;
 }
 .card-body-tags {
   display: flex;
   flex-wrap: wrap;
   gap: 0.75rem;
   align-items: baseline;
-  margin-top: 1rem;
+  margin-top: 0.5rem;
 }
 .tag {
-  padding: 0.4rem 0.8rem;
-  border-radius: 0.3rem;
-  font-size: 0.9rem;
+  padding: 0.3rem 0.6rem;
+  border-radius: 0.2rem;
+  font-size: 0.8rem;
   text-transform: uppercase;
 }
 .tag-live-batch {
@@ -342,7 +344,7 @@ nav .logo .logo-img {
 }
 .right .price {
   font-size: 1.8rem;
-  font-weight: bold;
+  font-weight: 500;
 }
 .right .gst {
   color: var(--text-secondary);
@@ -356,7 +358,7 @@ nav .logo .logo-img {
   border-radius: 0.25rem;
   background-color: #ffffff;
   color: #000000;
-  font-size: 0.9rem;
+  font-size: 0.7rem;
   font-weight: bold;
   text-align: center;
 }
@@ -364,7 +366,7 @@ nav .logo .logo-img {
   width: 100%;
   padding: 1rem 1.2rem;
   margin-top: 1.5rem;
-  border-radius: 0.5rem;
+  border-radius: 0.4rem;
   border: none;
   background-color: var(--primary-color);
   color: #000000;
@@ -378,7 +380,7 @@ nav .logo .logo-img {
   flex-direction: column;
   align-items: center;
   gap: 5vh;
-  margin: 20vh auto;
+  margin: 25vh auto;
   padding: 0 var(--vertical-padding);
 }
 .company-section .company-section-top {
@@ -406,31 +408,32 @@ nav .logo .logo-img {
   cursor: pointer;
 }
 footer {
+  padding: 5rem 2rem;
+  width: 100%;
   display: flex;
   flex-direction: column;
+  padding-bottom: 2rem;
   align-items: center;
-  gap: 2vh;
-  margin-top: 15vh;
 }
 .footer-logo {
-  width: clamp(2.5rem, 4vw, 3.5rem);
+  width: clamp(2.5rem, 3vw, 3.5rem);
 }
 .footer-top {
+  width: 100%;
   display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
   justify-content: space-between;
-  width: 90%;
-  max-width: 87.5rem;
-  padding: 10vh 0;
-  gap: 2vw;
-  border-top: 1px solid var(--tag-color);
-  border-bottom: 1px solid var(--tag-color);
+  padding: 7rem 2.5rem;
+  border-top: 2px solid var(--border-color);
+  border-bottom: 2px solid var(--border-color);
 }
 .box-inside-footer-top {
   display: flex;
   flex-direction: column;
-  gap: 1.2rem;
+  gap: 1rem;
   font-family: 'hell';
-  font-size: 1.1rem;
+  font-size: 1rem;
 }
 .box-inside-footer-top .links-head {
   text-transform: uppercase;
@@ -440,16 +443,19 @@ footer {
 }
 .box-inside-footer-top .social-links {
   display: flex;
-  gap: 1.5rem;
+  gap: 2rem;
 }
 .box-inside-footer-top .social-links i {
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   cursor: pointer;
 }
 .copyright-section {
-  margin: 2rem 0;
+  margin: 1rem 0;
+  width: 100%;
   text-align: center;
-  padding: 0 1rem;
+  max-width: 16vw;
+  font-family: 'helb';
+  font-size: 0.95rem;
 }
 @media (max-width: 992px) {
 }
